[gd_scene load_steps=4 format=3 uid="uid://dktfi7rpxdn17"]

[ext_resource type="Script" path="res://scenes/levels/level10_1/who_are_you_10.gd" id="1_mqcgs"]
[ext_resource type="FontFile" uid="uid://c15qulsl5wbmb" path="res://assets/fonts/RussoOne-Regular.ttf" id="2_ikpvr"]
[ext_resource type="AudioStream" uid="uid://b0ghbd4vvruhh" path="res://music/najatie-na-kompyuternuyu-knopku1.mp3" id="3_whd5p"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_mqcgs")

[node name="LevelCompleteLabel" type="Label" parent="."]
offset_left = -1.0
offset_top = 584.0
offset_right = 1922.0
offset_bottom = 827.0
theme_override_fonts/font = ExtResource("2_ikpvr")
theme_override_font_sizes/font_size = 64
text = "Вы сейчас находитесь в меловом периоде.
Вы трицератопс."
horizontal_alignment = 1

[node name="HideButton" type="Button" parent="."]
offset_left = 720.0
offset_top = 821.0
offset_right = 1194.0
offset_bottom = 912.0
theme_override_fonts/font = ExtResource("2_ikpvr")
theme_override_font_sizes/font_size = 36
text = "Дальше"

[node name="button" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_whd5p")

[connection signal="pressed" from="HideButton" to="." method="_on_hide_button_pressed"]
